--- a/imageGenerator/package.json
+++ b/imageGenerator/package.json
@@ -5,12 +5,14 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "frontend" : "cd frontend && npx parcel index.html",
+    "start": "concurrently \"nodemon server.js\" \"npm run frontend\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "concurrently": "^8.2.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
