--- a/imageGenerator/package.json
+++ b/imageGenerator/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "frontend" : "cd frontend && npx parcel index.html",
+    "frontend" : "cd Frontend && npx parcel index.html",
     "start": "concurrently \"nodemon server.js\" \"npm run frontend\""
   },
   "author": "",
