--- a/imageGenerator/package.json
+++ b/imageGenerator/package.json
@@ -1,23 +1,22 @@
 {
-  "name": "backend",
+  "name": "day14",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "frontend" : "cd Frontend && npx parcel index.html",
-    "start": "concurrently \"nodemon server.js\" \"npm run frontend\""
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.1",
-    "concurrently": "^8.2.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.4.1",
-    "nodemon": "^3.1.2"
+    "parcel": "^2.12.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.23.1"
+  },
+  "devDependencies": {
+    "process": "^0.11.10"
   }
 }
