--- a/imageGenerator/package.json
+++ b/imageGenerator/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm index.html"
+    "start": "npx parcel index.html"
   },
   "keywords": [],
   "author": "",
