--- a/imageGenerator/package.json
+++ b/imageGenerator/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "app.js",
   "type": "module",
+  "proxy": "http://localhost:5000/",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx parcel index.html"
+    "start": "react-scripts start",
+    "build": "react-scripts index.html"
   },
   "keywords": [],
   "author": "",
