--- a/imageGenerator/package.json
+++ b/imageGenerator/package.json
@@ -7,7 +7,7 @@
   "proxy": "http://localhost:5000/",
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts index.html"
+    "build": "react-scripts build"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +17,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
-    "react-script": "^2.0.5"
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
     "process": "^0.11.10"
