--- a/imageGeneratorBackend/imageGenerator/package.json
+++ b/imageGeneratorBackend/imageGenerator/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "backend": "file:..",
     "parcel": "^2.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
