--- a/imageGeneratorBackend/package.json
+++ b/imageGeneratorBackend/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "client": "npm run start --prefix imageGenerator",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "dev": "concurrently \"npm run start\" \"npm run client\"",
     "deploy" : "npm install --prefix imageGenerator && npm run build --prefix imageGenerator && npm install"
   },
   "author": "",
