--- a/imageGeneratorBackend/imageGenerator/package.json
+++ b/imageGeneratorBackend/imageGenerator/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=3006 && react-scripts start",
     "build": "react-scripts build"
   },
   "keywords": [],
