--- a/imageGeneratorBackend/imageGenerator/package.json
+++ b/imageGeneratorBackend/imageGenerator/package.json
@@ -1,37 +1,19 @@
 {
-  "name": "imageGenerator",
+  "name": "imagegenerator",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
-  "type": "module",
+  "main": "index.js",
   "scripts": {
     "start": "set PORT=3006 && react-scripts start",
     "build": "react-scripts build"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "backend": "file:..",
-    "parcel": "^2.12.0",
+    "imageGeneratorBackend": "file:..",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1"
-  },
-  "devDependencies": {
-    "process": "^0.11.10"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
   }
 }
