--- a/imageGeneratorBackend/imageGenerator/package.json
+++ b/imageGeneratorBackend/imageGenerator/package.json
@@ -6,7 +6,9 @@
   "proxy": "http://localhost:10000/",
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "author": "",
   "license": "ISC",
