--- a/imageGeneratorBackend/package.json
+++ b/imageGeneratorBackend/package.json
@@ -8,7 +8,8 @@
     "start": "node server.js",
     "client": "npm run start --prefix imageGenerator",
     "dev": "concurrently \"npm run start\" \"npm run client\"",
-    "deploy" : "npm install --prefix imageGenerator && npm run build --prefix imageGenerator && npm install"
+    "deploy" : "npm install --prefix imageGenerator && npm run build --prefix imageGenerator && npm install",
+    "build": "cd imageGenerator && npm install && npm run build"
   },
   "author": "",
   "license": "ISC",
