--- a/imageGeneratorBackend/imageGenerator/package.json
+++ b/imageGeneratorBackend/imageGenerator/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "imageGeneratorBackend": "file:..",
+    "jwt-decode": "^4.0.0",
     "parcel": "^2.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
