--- a/imageGeneratorBackend/imageGenerator/package.json
+++ b/imageGeneratorBackend/imageGenerator/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "concurrently": "^8.2.2",
     "imageGeneratorBackend": "file:..",
     "jwt-decode": "^4.0.0",
     "parcel": "^2.12.0",
