--- a/imageGeneratorBackend/package.json
+++ b/imageGeneratorBackend/package.json
@@ -8,18 +8,18 @@
     "start": "node server.js",
     "client": "npm run start --prefix imageGenerator",
     "dev": "concurrently \"npm run start\" \"npm run client\"",
-    "deploy" : "npm install --prefix imageGenerator && npm run build --prefix imageGenerator && npm install",
+    "deploy": "npm install --prefix imageGenerator && npm run build --prefix imageGenerator && npm install",
     "build": "cd imageGenerator && npm install && npm install concurrently --save-dev && npm run build "
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "concurrently": "^8.2.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.4.1",
-    "concurrently": "^7.1.0"
+    "mongoose": "^8.4.1"
   }
 }
