--- a/imageGeneratorBackend/package.json
+++ b/imageGeneratorBackend/package.json
@@ -5,11 +5,11 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
+    "start": "npm-run-all --parallel server client",
     "client": "npm run start --prefix imageGenerator",
     "dev": "concurrently \"npm run start\" \"npm run client\"",
     "deploy": "npm install --prefix imageGenerator && npm run build --prefix imageGenerator && npm install",
-    "build": "cd imageGenerator && npm install && npm install concurrently --save-dev && npm run build "
+    "build": "cd imageGenerator && npm install && --save-dev && npm run build "
   },
   "author": "",
   "license": "ISC",
