--- a/imageGeneratorBackend/package.json
+++ b/imageGeneratorBackend/package.json
@@ -9,7 +9,7 @@
     "client": "npm run start --prefix imageGenerator",
     "dev": "concurrently \"npm run start\" \"npm run client\"",
     "deploy": "npm install --prefix imageGenerator && npm run build --prefix imageGenerator && npm install",
-    "build": "cd imageGenerator && npm install && --save-dev && npm run build "
+    "build": "cd imageGenerator && npm install && npm run build "
   },
   "author": "",
   "license": "ISC",
