--- a/imageGeneratorBackend/package.json
+++ b/imageGeneratorBackend/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm-run-all --parallel server client",
+    "start": "node server.js",
     "client": "npm run start --prefix imageGenerator",
     "dev": "concurrently \"npm run start\" \"npm run client\"",
     "deploy": "npm install --prefix imageGenerator && npm run build --prefix imageGenerator && npm install",
