--- a/imageGeneratorBackend/package.json
+++ b/imageGeneratorBackend/package.json
@@ -4,12 +4,10 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "client": "npm run start --prefix imageGenerator",
     "dev": "concurrently \"npm run start\" \"npm run client\"",
-    "deploy" : "npm install --prefix imageGenerator && npm run build --prefix imageGenerator && npm install",
-    "build": "cd imageGenerator && npm install && npm run build"
+    "build": "npm install concurrently && cd imageGenerator && npm install && npm run build"
   },
   "author": "",
   "license": "ISC",
